Java 25 + Vaadin 25.2